# sharktopus

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SPREAD_MODE_REPORT.md  TROUBLESHOOTING_REPLAY_UCHOA.md  hatch_build.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-image.yml  build-wheels.yml  ci.yml
deploy/aws/: Dockerfile  _sso_oidc.py  handler.py  provision.py
deploy/azure/: Dockerfile  main.py  provision.py  requirements.txt
deploy/gcloud/: Dockerfile  _oauth_browser.py  _sdk_ops.py  main.py  provision.py  requirements.txt
docs/: ACCOUNT_SETUP.md  ADDING_A_PRODUCT.md  ARCHITECTURE.md  AWS_ACCOUNT_VISUAL.md  CONTRIBUTING_IMAGES.md  DEPLOY_AWS.md  DEPLOY_AZURE.md  DEPLOY_GCLOUD.md  IMAGE_STORAGE_AND_BILLING.md  OAUTH_VERIFICATION.md  ORIGIN.md  PLANO.md  ROADMAP.md
packaging/conda-forge/: README.md
packaging/conda-forge/recipe/: meta.yaml
scripts/: Dockerfile.smoke  build_logo_assets.py  build_wgrib2.sh  bundle_wgrib2.sh  generate_gfs_catalog.py  smoke_aws_crop.py  smoke_checks.sh  smoke_install.sh  smoke_live.py  smoke_spread.py  smoke_wrf_canonical.py
site/: index.html  privacy.html  terms.html
src/sharktopus/: __init__.py  _gcloud_auth.py  _wgrib2.py  aws_quota.py  batch.py  cli.py  config.py  grib.py  paths.py  setup.py  wrf.py
src/sharktopus/batch/: __init__.py  orchestrator.py  priority.py  queue.py  registry.py  schedule.py  spread.py
src/sharktopus/cloud/: __init__.py  aws_quota.py  azure_quota.py  gcloud_quota.py
src/sharktopus/io/: __init__.py  config.py  grib.py  wgrib2.py
src/sharktopus/sources/: __init__.py  _common.py  aws.py  aws_crop.py  azure.py  azure_crop.py  base.py  gcloud.py  gcloud_crop.py  nomads.py  nomads_filter.py  rda.py
src/sharktopus/webui/: __init__.py  app.py  catalog.py  db.py  i18n.py  inventory_scan.py  models.py  paths.py  products.py  runner.py  server.py  templating.py
src/sharktopus/webui/data/products/: gfs_pgrb2_0p25.json
src/sharktopus/webui/routes/: __init__.py  api.py  pages.py
src/sharktopus/webui/static/css/: app.css
src/sharktopus/webui/static/js/: app.js
src/sharktopus/webui/templates/: 404.html  _fs_browser.html  about.html  base.html  credentials.html  dashboard.html  help.html  inventory.html  job_detail.html  jobs.html  quota.html  settings.html  setup.html  setup_provider.html  sources.html  submit.html
src/sharktopus/webui/templates/partials/: job_live.html
tests/: test_availability.py  test_aws_quota.py  test_batch.py  test_batch_parallel.py  test_batch_spread.py  test_byte_range.py  test_cli.py  test_config.py  test_deploy_handlers.py  test_gcloud_quota.py  test_grib.py  test_paths.py  test_queue.py  test_sources_aws_crop.py  test_sources_base.py  test_sources_gcloud_crop.py  test_sources_mirrors.py  test_sources_nomads.py  test_sources_nomads_filter.py  test_webui_app.py  test_webui_cli.py  test_webui_db.py  test_webui_inventory_scan.py  test_webui_models.py  test_wgrib2_resolver.py
