[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharktopus"
version = "0.1.4"
description = "Cloud-native GRIB cropper — crop before you download. GFS today; HRRR, NAM, ECMWF open-data as the community grows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "sharktopus contributors", email = "sharktopus.convect@gmail.com" },
]
keywords = ["gfs", "weather", "wrf", "grib2", "noaa", "forecast"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.24", "flask>=3"]
xarray = ["cfgrib", "xarray"]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
sharktopus = "sharktopus.cli:main"

[project.urls]
Homepage = "https://sharktopus.leandrometeoro.com.br/"
Source = "https://github.com/sharktopus-project/sharktopus"
Issues = "https://github.com/sharktopus-project/sharktopus/issues"
Changelog = "https://github.com/sharktopus-project/sharktopus/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sharktopus"]
# Binary wgrib2 lives in src/sharktopus/_bin/ and is dropped there at build
# time by scripts/bundle_wgrib2.sh. When the dir is empty (sdist / source
# install) the wheel is pure-Python and users must have wgrib2 on PATH.
# webui/templates + webui/static are always bundled — needed at runtime.
artifacts = [
    "src/sharktopus/_bin/wgrib2*",
    "src/sharktopus/webui/templates/**/*.html",
    "src/sharktopus/webui/static/**/*",
    "src/sharktopus/webui/data/**/*.json",
]

[tool.hatch.build.targets.wheel.hooks.custom]
# See hatch_build.py — flips the wheel to platform-specific when a wgrib2
# binary is present in _bin/ at build time.

[tool.hatch.build.targets.sdist]
# Don't ship the bundled binary in the sdist; each platform builds its own.
exclude = ["src/sharktopus/_bin/wgrib2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
