[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharktopus"
version = "0.1.6"
description = "Cloud-native GRIB cropper — crop before you download. GFS today; HRRR, NAM, ECMWF open-data as the community grows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "sharktopus contributors", email = "sharktopus.convect@gmail.com" },
]
keywords = ["gfs", "weather", "wrf", "grib2", "noaa", "forecast"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.24", "flask>=3"]
xarray = ["cfgrib", "xarray"]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
# Cloud-deploy extras: pip install 'sharktopus[aws]' before
# `sharktopus --setup aws`, etc. Without these, --setup walks through
# the auth wizard and only then crashes on a missing import.
aws = ["boto3>=1.28"]
gcloud = [
    "google-auth>=2.20",
    "google-auth-oauthlib>=1.0",
    "google-cloud-run>=0.10",
    "google-cloud-storage>=2.10",
    "google-cloud-artifact-registry>=1.10",
]
azure = [
    "azure-identity>=1.15",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-containerinstance>=10.1",
    "azure-mgmt-storage>=21.0",
    "azure-storage-blob>=12.19",
]
all = [
    "sharktopus[ui,aws,gcloud,azure]",
]

[project.scripts]
sharktopus = "sharktopus.cli:main"

[project.urls]
Homepage = "https://sharktopus.leandrometeoro.com.br/"
Source = "https://github.com/sharktopus-project/sharktopus"
Issues = "https://github.com/sharktopus-project/sharktopus/issues"
Changelog = "https://github.com/sharktopus-project/sharktopus/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sharktopus"]
# Binary wgrib2 lives in src/sharktopus/_bin/ and is dropped there at build
# time by scripts/bundle_wgrib2.sh. When the dir is empty (sdist / source
# install) the wheel is pure-Python and users must have wgrib2 on PATH.
# webui/templates + webui/static are always bundled — needed at runtime.
artifacts = [
    "src/sharktopus/_bin/wgrib2*",
    "src/sharktopus/webui/templates/**/*.html",
    "src/sharktopus/webui/static/**/*",
    "src/sharktopus/webui/data/**/*.json",
]

# Bundle the cloud deploy scripts inside the wheel so `sharktopus --setup`
# works on a plain `pip install` (without a source checkout). They land
# under sharktopus/_deploy/{aws,gcloud,azure}/ and setup.py knows to
# look there as a fallback to the repo-root deploy/ checkout.
[tool.hatch.build.targets.wheel.force-include]
"deploy/aws/provision.py" = "sharktopus/_deploy/aws/provision.py"
"deploy/aws/handler.py" = "sharktopus/_deploy/aws/handler.py"
"deploy/aws/_sso_oidc.py" = "sharktopus/_deploy/aws/_sso_oidc.py"
"deploy/aws/Dockerfile" = "sharktopus/_deploy/aws/Dockerfile"
"deploy/gcloud/provision.py" = "sharktopus/_deploy/gcloud/provision.py"
"deploy/gcloud/main.py" = "sharktopus/_deploy/gcloud/main.py"
"deploy/gcloud/_sdk_ops.py" = "sharktopus/_deploy/gcloud/_sdk_ops.py"
"deploy/gcloud/_oauth_browser.py" = "sharktopus/_deploy/gcloud/_oauth_browser.py"
"deploy/gcloud/oauth_client.json" = "sharktopus/_deploy/gcloud/oauth_client.json"
"deploy/gcloud/Dockerfile" = "sharktopus/_deploy/gcloud/Dockerfile"
"deploy/gcloud/requirements.txt" = "sharktopus/_deploy/gcloud/requirements.txt"
"deploy/azure/provision.py" = "sharktopus/_deploy/azure/provision.py"
"deploy/azure/main.py" = "sharktopus/_deploy/azure/main.py"
"deploy/azure/Dockerfile" = "sharktopus/_deploy/azure/Dockerfile"
"deploy/azure/requirements.txt" = "sharktopus/_deploy/azure/requirements.txt"

[tool.hatch.build.targets.wheel.hooks.custom]
# See hatch_build.py — flips the wheel to platform-specific when a wgrib2
# binary is present in _bin/ at build time.

[tool.hatch.build.targets.sdist]
# Don't ship the bundled binary in the sdist; each platform builds its own.
exclude = ["src/sharktopus/_bin/wgrib2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
